# wotlk-custom-packets

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
ClientExtensions/: CMakeLists.txt  ClientLua.cpp  ClientNetwork.cpp  Main.cpp
CustomPackets/: CMakeLists.txt
